# WCSim

./: CMakeLists.txt
app/: CMakeLists.txt  check_uniform_voxel.cc  check_uniform_voxel.hh
include/: WCSimPrimaryGeneratorAction.hh  WCSimPrimaryGeneratorMessenger.hh  WCSimVoxGen.hh
mac_verify/: check_uniform.mac  check_uniform.mac~
macros/: test_Wedge_VoxGen.mac
sample-root-scripts/: EventDisplay.C  plot_pmts.C  sample_readfile.C  voxel_readfile.C
src/: WCSimDetectorConfigs.cc  WCSimEventAction.cc  WCSimPrimaryGeneratorAction.cc  WCSimPrimaryGeneratorMessenger.cc  WCSimRunActionMessenger.cc  WCSimVoxGen.cc  WCSimWCDigitizer.cc  WCSimWCTrigger.cc
